[package]
name = "hyrax"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
rand = "0.8"
num-traits = "0.2.17"
rand_core = { version = "0.6", default-features = false }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0-ce", features = [
  "halo2-axiom",
] }
getrandom = "0.2"
rand_chacha = "0.3.1"
blake2 = "0.10.6"
rayon = "1.7"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.8.2", default-features = false }
bincode = "1.3.3"

[features]

[[bin]]
name = "benchmark_iris_commit"
path = "src/bin/benchmark_iris_commit.rs"
