[package]
name = "hyrax"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
rand = "0.8"
num-traits = "0.2.17"
rand_core = { version = "0.6", default-features = false }
getrandom = "0.2"
rand_chacha = "0.3.1"
blake2 = "0.10.6"
rayon = "1.7"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.8.2", default-features = false }
bincode = "1.3.3"
clap = { version = "=4.3.21", features = ["derive"] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4"
ark-bn254 = "0.4.0"

[profile.release]
opt-level = "s"

[features]

[[bin]]
name = "hyrax_commit"
path = "src/bin/hyrax_commit.rs"

[[bin]]
name = "example_hyrax_commit"
path = "src/bin/example_hyrax_commit.rs"
