[package]
name = "hyrax"
version = "0.1.0"
edition = "2021"

[dependencies]
hash2curve = "0.1"
ark-bn254 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["sponge"] }
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-std = { version = "0.4.0", features = ["print-trace"] }
ark-test-curves = "0.4.2"
approx = "0.5"
criterion = "0.5.1"
itertools = "0.11.0"
rayon = "1.7"
thiserror = "1.0.40"
tracing = "0.1.37"
group = "0.13.0"
rand = "0.8"
ndarray = "0.15.6"
num = "0.4.1"
tracing-subscriber = "0.3.17"
remainder-shared-types = { path = "../remainder_shared_types" }
dyn-clone = "1.0.13"
dyn-clonable = "0.9.0"
log = "0.4"
env_logger = "0.10"
pretty_env_logger = "0.5"
chrono = "=0.4.30"
clap = { version = "=4.3.21", features = ["derive"] }
once_cell = "1.18.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
hex = "0.4"
rand_core = { version = "0.6", default-features = false }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0-ce", features = [
  "halo2-axiom",
] }
getrandom = "0.2"
rand_chacha = "0.3.1"
blake2 = "0.10.6"

[features]
default = ["parallel"]
parallel = [
  "ark-ff/parallel",
  "ark-poly/parallel",
  "ark-std/parallel",
  "ark-crypto-primitives/parallel",
]
