[package]
name = "remainder-shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0-ce", features = [
    "halo2-axiom",
] }
halo2curves = { git = "https://github.com/axiom-crypto/halo2.git", tag = "v2023_04_06" }
poseidon = { git = "https://github.com/axiom-crypto/halo2.git", tag = "v2023_04_06" } # Scroll's Poseidon impl
serde_json = "1.0.105"
thiserror = "1.0.40"
tracing = "0.1.37"
itertools = "0.11.0"
ark-std = "0.4.0"
